force high z-index on UI boxes to avoid garbling on resize

--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ input[type='number'] {
 	background: #def;
 	text-align: right;
 }
+.info_box, #ui {
+	z-index: 1000;
+}
 .info_box {
 	border: 1px solid black;
 	position: absolute;
